Caffeine cache instead of EHCache3