@@ -23,6 +23,18 @@
  */
 package org.primefaces.showcase.view.multimedia;
 
+import java.awt.Graphics2D;
+import java.awt.image.BufferedImage;
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
+import java.io.File;
+import java.nio.file.Files;
+
+import javax.annotation.PostConstruct;
+import javax.enterprise.context.RequestScoped;
+import javax.imageio.ImageIO;
+import javax.inject.Named;
+
 import org.jfree.chart.ChartFactory;
 import org.jfree.chart.ChartUtilities;
 import org.jfree.chart.JFreeChart;
@@ -30,17 +42,6 @@ import org.jfree.data.general.DefaultPieDataset;
 import org.jfree.data.general.PieDataset;
 import org.primefaces.model.DefaultStreamedContent;
 import org.primefaces.model.StreamedContent;
-
-import javax.annotation.PostConstruct;
-import javax.enterprise.context.RequestScoped;
-import javax.imageio.ImageIO;
-import javax.inject.Named;
-import java.awt.*;
-import java.awt.image.BufferedImage;
-import java.io.ByteArrayInputStream;
-import java.io.ByteArrayOutputStream;
-import java.io.File;
-import java.io.FileInputStream;
 
 @Named
 @RequestScoped
@@ -54,39 +55,41 @@ public class GraphicImageView {
     public void init() {
         try {
             graphicText = DefaultStreamedContent.builder()
-                    .contentType("image/png")
-                    .stream(() -> {
-                        try {
-                            BufferedImage bufferedImg = new BufferedImage(100, 25, BufferedImage.TYPE_INT_RGB);
-                            Graphics2D g2 = bufferedImg.createGraphics();
-                            g2.drawString("This is a text", 0, 10);
-                            ByteArrayOutputStream os = new ByteArrayOutputStream();
-                            ImageIO.write(bufferedImg, "png", os);
-                            return new ByteArrayInputStream(os.toByteArray());
-                        }
-                        catch (Exception e) {
-                            e.printStackTrace();
-                            return null;
-                        }
-                    })
-                    .build();
+                        .contentType("image/png")
+                        .stream(() -> {
+                            try {
+                                BufferedImage bufferedImg = new BufferedImage(100, 25, BufferedImage.TYPE_INT_RGB);
+                                Graphics2D g2 = bufferedImg.createGraphics();
+                                g2.drawString("This is a text", 0, 10);
+                                ByteArrayOutputStream os = new ByteArrayOutputStream();
+                                ImageIO.write(bufferedImg, "png", os);
+                                return new ByteArrayInputStream(os.toByteArray());
+                            }
+                            catch (Exception e) {
+                                e.printStackTrace();
+                                return null;
+                            }
+                        })
+                        .build();
 
             chart = DefaultStreamedContent.builder()
-                    .contentType("image/png")
-                    .stream(() -> {
-                        try {
-                            JFreeChart jfreechart = ChartFactory.createPieChart("Cities", createDataset(), true, true, false);
-                            File chartFile = new File("dynamichart");
-                            ChartUtilities.saveChartAsPNG(chartFile, jfreechart, 375, 300);
-                            return new FileInputStream(chartFile);
-                        }
-                        catch (Exception e) {
-                            e.printStackTrace();
-                            return null;
-                        }
-                    })
-                    .build();
-        } catch (Exception e) {
+                        .contentType("image/png")
+                        .stream(() -> {
+                            try {
+                                JFreeChart jfreechart = ChartFactory.createPieChart("Cities", createDataset(), true,
+                                            true, false);
+                                File chartFile = new File("dynamichart");
+                                ChartUtilities.saveChartAsPNG(chartFile, jfreechart, 375, 300);
+                                return Files.newInputStream(chartFile.toPath());
+                            }
+                            catch (Exception e) {
+                                e.printStackTrace();
+                                return null;
+                            }
+                        })
+                        .build();
+        }
+        catch (Exception e) {
             e.printStackTrace();
         }
     }
@@ -101,10 +104,10 @@ public class GraphicImageView {
 
     private PieDataset createDataset() {
         DefaultPieDataset dataset = new DefaultPieDataset();
-        dataset.setValue("New York", new Double(45.0));
-        dataset.setValue("London", new Double(15.0));
-        dataset.setValue("Paris", new Double(25.2));
-        dataset.setValue("Berlin", new Double(14.8));
+        dataset.setValue("New York", Double.valueOf(45.0));
+        dataset.setValue("London", Double.valueOf(15.0));
+        dataset.setValue("Paris", Double.valueOf(25.2));
+        dataset.setValue("Berlin", Double.valueOf(14.8));
 
         return dataset;
     }
